Set up reference management

--- a/References.bib
+++ b/References.bib
@@ -2448,6 +2448,14 @@
   year = {2017}
 }
 
+@inproceedings{Thomas2012,
+	title = {Implications of the occurrence of paired anterior chaetae in the late early {Cambrian} mollusc \textit{{Pelagiella}} from the {Kinzers} {Formation} of {Pennsylvania} for relationships among taxa and early evolution of the {Mollusca}},
+	booktitle = {Geological {Society} of {America} ({GSA}) {Annual} {Meeting} 2012 {Abstracts}},
+	author = {Thomas, R. D. and Vinther, J.},
+	year = {2012},
+	pages = {326}
+}
+
 @article{Topper2013Reappraisalof,
   author = {Topper, T. P. and Harper, D. A. T. and Ahlberg, P.},
   doi = {10.1080/11035897.2013.811440},
@@ -2479,6 +2487,18 @@
   title = {{On \textit{Phoronis pacifica} sp. nov.}},
   volume = {2},
   year = {1901}
+}
+
+@article{Treves2003,
+	title = {Aragonite formation in the chiton ({Mollusca}) girdle},
+	volume = {86},
+	doi = {10.1002/hlca.200390096},
+	number = {4},
+	urldate = {2012-08-01},
+	journal = {Helvetica Chimica Acta},
+	author = {Treves, K. and Traub, W. and Weiner, S. and Addadi, L.},
+	year = {2003},
+	pages = {1101--1112},
 }
 
 @article{Ushatinskaya2016Protegulumand,
