--- a/References.bib
+++ b/References.bib
@@ -2501,6 +2501,22 @@
 	pages = {1101--1112},
 }
 
+@article{Hoare2009,
+	title = {Aesthete Canals in the {Chiton} \textit{{Euleptochiton} spatulatus} ({Polyplacophora}, {Mollusca}) from the {Pennsylvanian} of {Ohio}},
+	volume = {109},
+	issn = {0030-0950},
+	url = {https://kb.osu.edu/dspace/handle/1811/52616},
+	abstract = {Department of Geology, Bowling Green State University, Bowling Green, OH},
+	language = {en\_US},
+	number = {3},
+	urldate = {2012-08-17},
+	journal = {The Ohio Journal of Science},
+	author = {Hoare, Richard D.},
+	month = jun,
+	year = {2009},
+	keywords = {Article},
+	pages = {48--51}
+}
 @article{Ushatinskaya2016Protegulumand,
   author = {Ushatinskaya, G. T.},
   doi = {10.1134/s0031030116020088},
