--- a/References.bib
+++ b/References.bib
@@ -999,6 +999,16 @@
   year = {1997},
 }
 
+@article{Hoare2009,
+	title = {Aesthete Canals in the {Chiton} \textit{{Euleptochiton} spatulatus} ({Polyplacophora}, {Mollusca}) from the {Pennsylvanian} of {Ohio}},
+	volume = {109},
+	number = {3},
+	journal = {The Ohio Journal of Science},
+	author = {Hoare, R. D.},
+	year = {2009},
+	pages = {48--51}
+}
+
 @article{Hodgson1994Ultrastructureof,
   author = {Hodgson, A. N. and Reunov, A. A.},
   doi = {10.1080/07924259.1994.9672365},
@@ -1543,7 +1553,6 @@
   author = {Nielsen, C.},
   doi = {10.1080/00785326.1966.10409644},
   journal = {Ophelia},
-  language = {en},
   number = {1},
   pages = {221--247},
   publisher = {Taylor {\&} Francis Group},
@@ -2404,6 +2413,17 @@
   year = {2012}
 }
 
+@article{Sutton2012Silurian,
+	title = {A {Silurian} armoured aplacophoran and implications for molluscan phylogeny},
+	volume = {490},
+	doi = {10.1038/nature11328},
+	number = {7418},
+	journal = {Nature},
+	author = {Sutton, M. D. and Briggs, D. E. G. and Siveter, D. J. and Siveter, D. J. and Sigwart, J. D.},
+	year = {2012},
+	pages = {94--97},
+}
+
 @incollection{Temereva2016Phoronida,
   address = {Oxford},
   author = {Temereva, E. N.},
@@ -2494,29 +2514,12 @@
 	volume = {86},
 	doi = {10.1002/hlca.200390096},
 	number = {4},
-	urldate = {2012-08-01},
 	journal = {Helvetica Chimica Acta},
 	author = {Treves, K. and Traub, W. and Weiner, S. and Addadi, L.},
 	year = {2003},
 	pages = {1101--1112},
 }
 
-@article{Hoare2009,
-	title = {Aesthete Canals in the {Chiton} \textit{{Euleptochiton} spatulatus} ({Polyplacophora}, {Mollusca}) from the {Pennsylvanian} of {Ohio}},
-	volume = {109},
-	issn = {0030-0950},
-	url = {https://kb.osu.edu/dspace/handle/1811/52616},
-	abstract = {Department of Geology, Bowling Green State University, Bowling Green, OH},
-	language = {en\_US},
-	number = {3},
-	urldate = {2012-08-17},
-	journal = {The Ohio Journal of Science},
-	author = {Hoare, Richard D.},
-	month = jun,
-	year = {2009},
-	keywords = {Article},
-	pages = {48--51}
-}
 @article{Ushatinskaya2016Protegulumand,
   author = {Ushatinskaya, G. T.},
   doi = {10.1134/s0031030116020088},
@@ -2561,6 +2564,16 @@
   year = {2015}
 }
 
+@article{Vendrasco2008,
+	title = {Aesthete canal morphology in the {Mopaliidae} ({Polyplacophora})},
+	volume = {25},
+	number = {1},
+	journal = {American Malacological Bulletin},
+	author = {Vendrasco, M. J. and Fernandez, C. Z. and Eernisse, D. J. and Runnegar, B. N.},
+	year = {2008},
+	pages = {51--69},
+}
+
 @article{Vendrasco2017,
   author = {Vendrasco, M. J. and Checa, A. G. and Porter, S. M.},
   journal = {Spanish Journal of Palaeontology},
@@ -2569,6 +2582,16 @@
   title = {{Periostracum and fibrous shell microstructure in the unusual Cambrian hyolith \textit{Cupitheca}}},
   volume = {32},
   year = {2017}
+}
+
+@article{VendrascoRunnegar2004,
+	title = {Late {Cambrian} and {Early} {Ordovician} stem group chitons ({Mollusca}: {Polyplacophora}) from {Utah} and {Missouri}},
+	volume = {78},
+	number = {4},
+	journal = {Journal of Paleontology},
+	author = {Vendrasco, M. J. and Runnegar, B. N.},
+	year = {2004},
+	pages = {675--689}
 }
 
 @article{Vinther2005,
@@ -3014,7 +3037,6 @@
   author = {Zhang, Z.-F. and Holmer, L. E. and Skovsted, C. B. and Brock, G. A. and Budd, G. E. and Fu, D. and Zhang, X.-L. and Shu, D.-G. and Han, J. and Liu, J.-N. and Wang, H. and Butler, A. and Li, G.-X.},
   doi = {10.1038/srep01066},
   journal = {Scientific Reports},
-  language = {en},
   pages = {1066},
   title = {{A sclerite-bearing stem group entoproct from the early Cambrian and its implications}},
   volume = {3},
