--- a/References.bib
+++ b/References.bib
@@ -999,6 +999,17 @@
   year = {1997},
 }
 
+@article{Hoare1986,
+	title = {The polyplacophoran “\textit{{Chiton}}” \textit{carbonarius} {Stevens}, 1858, in {North} {America} and new related species},
+	volume = {60},
+	doi = {10.1017/S0022336000022150},
+	number = {3},
+	journal = {Journal of Paleontology},
+	author = {Hoare, R. D. and Mapes, R. H.},
+	year = {1986},
+	pages = {627--635},
+}
+
 @article{Hoare2009,
 	title = {Aesthete Canals in the {Chiton} \textit{{Euleptochiton} spatulatus} ({Polyplacophora}, {Mollusca}) from the {Pennsylvanian} of {Ohio}},
 	volume = {109},
