--- a/References.bib
+++ b/References.bib
@@ -427,6 +427,30 @@
   year = {2012}
 }
 
+@article{ConwayMorris2006,
+	title = {Darwin's dilemma: the realities of the {Cambrian} 'explosion'},
+	volume = {361},
+	doi = {10.1098/rstb.2006.1846},
+	number = {1470},
+	journal = {Philosophical Transactions of the Royal Society of London B: Biological Sciences},
+	author = {Conway Morris, S.},
+	year = {2006},
+	pmid = {16754615},
+	pages = {1069--83},
+}
+
+@article{ConwayMorris2007,
+	title = {Halwaxiids and the early evolution of the lophotrochozoans},
+	volume = {315},
+	doi = {10.1126/science.1137187},
+	number = {5816},
+	journal = {Science},
+	author = {Conway Morris, S. and Caron, J.-B.},
+	year = {2007},
+	pmid = {17332408},
+	pages = {1255--1258},
+}
+
 @article{Cooper1976LowerCambrian,
   author = {Cooper, G. A.},
   journal = {{Journal of Paleontology}},
@@ -2626,6 +2650,17 @@
   title = {{Machaeridians are Palaeozoic armoured annelids}},
   volume = {451},
   year = {2008}
+}
+
+@article{Vinther2012,
+	title = {The origin of multiplacophorans – convergent evolution in aculiferan molluscs},
+	volume = {55},
+	doi = {10.1111/j.1475-4983.2012.01180.x},
+	number = {5},
+	journal = {Palaeontology},
+	author = {Vinther, J. and Jell, P. A. and Kampouris, G. and Carney, R. and Racicot, R. A. and Briggs, D. E. G.},
+	year = {2012},
+	pages = {1007--1019},
 }
 
 @article{Vogt2017,
