--- a/References.bib
+++ b/References.bib
@@ -222,6 +222,17 @@
   year = {2017},
 }
 
+@article{Baxter1987,
+	title = {The infrastructure of aesthetes in \textit{{Tonicella} marmorea} ({Polyplacophora}; {Ischnochitonina}) and a new functional hypothesis},
+	volume = {211},
+	doi = {10.1111/j.1469-7998.1987.tb04473.x},
+	number = {4},
+	journal = {Journal of Zoology},
+	author = {Baxter, J. M. and Jones, A. M. and Sturrock, M. G.},
+	year = {1987},
+	pages = {589--604},
+}
+
 @article{Benedetto2009iChaniella,
   author = {Benedetto, J. L.},
   doi = {10.1007/s12542-009-0023-7},
@@ -1670,6 +1681,17 @@
   title = {{Revision der pal{\"{a}}ozoischen Hyolithiden B{\"{o}}hmens}},
   volume = {7},
   year = {1891}
+}
+
+@article{Nutzel2006,
+	title = {Origin of planktotrophy—evidence from early molluscs},
+	volume = {8},
+	doi = {10.1111/j.1525-142X.2006.00105.x},
+	journal = {Evolution \& Development},
+	author = {Nützel, A. and Lehnert, O. and Frýda, Jirí},
+	year = {2006},
+	pmid = {16805897},
+	pages = {325--330},
 }
 
 @article{Orrhage1971,
