--- a/References.bib
+++ b/References.bib
@@ -2514,6 +2514,18 @@
   year = {2017}
 }
 
+@article{Runnegar1983,
+	title = {Anatomy, ecology and affinities of the {Australian} {Early} {Cambrian} bivalve \textit{{Pojetaia} runnegari} {Jell}},
+	volume = {57},
+	url = {http://www.jstor.org/stable/10.2307/1304610},
+	number = {1},
+	urldate = {2012-08-31},
+	journal = {Journal of Paleontology},
+	author = {Runnegar, Bruce and Bentley, Christopher},
+	year = {1983},
+	pages = {73--92},
+	file = {PDF:C\:\\Users\\ms609\\Zotero\\storage\\TL4CQF79\\Runnegar, Bentley_1983_Anatomy, ecology and affinities of the Australian Early Cambrian bivalve ~Pojetaia runnegari~ Jell.pdf:application/pdf}
+}
 @article{Temereva2017Thefirst,
   author = {Temereva, E. N. and Kuzmina, T. V.},
   doi = {10.1186/s12862-017-1029-5},
