Plotting and preparing

--- a/References.bib
+++ b/References.bib
@@ -1990,6 +1990,24 @@
   year = {2001},
 }
 
+@article{Rogalla2003,
+	title = {{SHELL} {MICROSTRUCTURE} {OF} {THE} {LATE} {CARBONIFEROUS} {ROSTROCONCH} {MOLLUSC} {APOTOCARDIUM} {LANTERNA} ({BRANSON}, 1965)},
+	volume = {77},
+	number = {4},
+	journal = {JOURNAL OF PALEONTOLOGY},
+	author = {Rogalla, N. S. and Carter, J. G. and Pojeta, J.},
+	year = {2003},
+	pages = {20},
+}
+
+@article{RogallaAmler2003,
+	title = {Biogeographical distribution patterns in {Mid}- and {Late} {Palaeozoic} {Conocardioida} ({Mollusca}: {Rostroconchia})},
+	volume = {242},
+	author = {Rogalla, N. S. and Amler, M. R. W.},
+	year = {2003},
+	pages = {51--69},
+}
+
 @article{Ronquist2012,
   author={Ronquist, F. and Teslenko, M. and {van der Mark}, P. and Ayres, D. L. and Darling, A. and Hohna, S. and Larget, B. and Liu, L. and Suchard, M. A. and Huelsenbeck, J. P.},
   doi={10.1093/sysbio/sys029},
@@ -2043,6 +2061,25 @@
   pages = {1227--1242},
   volume = {59},
   year = {1985},
+}
+
+@article{Runnegar1978,
+	title = {Origin and evolution of the {Class} {Rostroconchia}},
+	volume = {284},
+	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences},
+	author = {Runnegar, B. N.},
+	year = {1978},
+	pages = {319--333},
+}
+
+@article{Runnegar1983,
+	title = {Anatomy, ecology and affinities of the {Australian} {Early} {Cambrian} bivalve \textit{{Pojetaia} runnegari} {Jell}},
+	volume = {57},
+	number = {1},
+	journal = {Journal of Paleontology},
+	author = {Runnegar, B. and Bentley, C.},
+	year = {1983},
+	pages = {73--92},
 }
 
 @article{Ruppert1983,
@@ -2514,18 +2551,6 @@
   year = {2017}
 }
 
-@article{Runnegar1983,
-	title = {Anatomy, ecology and affinities of the {Australian} {Early} {Cambrian} bivalve \textit{{Pojetaia} runnegari} {Jell}},
-	volume = {57},
-	url = {http://www.jstor.org/stable/10.2307/1304610},
-	number = {1},
-	urldate = {2012-08-31},
-	journal = {Journal of Paleontology},
-	author = {Runnegar, Bruce and Bentley, Christopher},
-	year = {1983},
-	pages = {73--92},
-	file = {PDF:C\:\\Users\\ms609\\Zotero\\storage\\TL4CQF79\\Runnegar, Bentley_1983_Anatomy, ecology and affinities of the Australian Early Cambrian bivalve ~Pojetaia runnegari~ Jell.pdf:application/pdf}
-}
 @article{Temereva2017Thefirst,
   author = {Temereva, E. N. and Kuzmina, T. V.},
   doi = {10.1186/s12862-017-1029-5},
