--- a/References.bib
+++ b/References.bib
@@ -2337,6 +2337,17 @@
   year = {2017},
 }
 
+@article{Katsuno2008,
+	title = {Comparative histology of radula-supporting structures in {Gastropoda}},
+	volume = {50},
+	doi = {10.4002/0076-2997-50.1.13},
+	number = {1},
+	journal = {Malacologia},
+	author = {Katsuno, S and Sasaki, T},
+	year = {2008},
+	pages = {13--56}
+}
+
 @phdthesis{Smith2012,
   address = {Toronto, Ontario},
   author = {Smith, M. R.},
@@ -2369,6 +2380,42 @@
   year = {2014}
 }
 
+@article{Reynolds1999,
+	title = {Phylogenetic relationships among families of the {Scaphopoda} ({Mollusca})},
+	volume = {126},
+	url = {http://dx.doi.org/10.1111/j.1096-3642.1999.tb00151.x},
+	doi = {10.1111/j.1096-3642.1999.tb00151.x},
+	number = {2},
+	journal = {Zoological Journal of the Linnean Society},
+	author = {Reynolds, Patrick D and Okusu, Akiko},
+	year = {1999},
+	pages = {131--154}
+}
+
+@article{Steiner1998,
+	title = {Phylogeny of {Scaphopoda} ({Mollusca}) in the light of new anatomical data on the {Gadilinidae} and some {Problematica}, and a reply to {Reynolds}},
+	volume = {27},
+	issn = {0300-3256},
+	url = {http://www.blackwell-synergy.com/doi/abs/10.1111/j.1463-6409.1998.tb00429.x},
+	doi = {10.1111/j.1463-6409.1998.tb00429.x},
+	number = {1},
+	urldate = {2012-08-23},
+	journal = {Zoologica Scripta},
+	author = {Steiner, Gerhard},
+	year = {1998},
+	pages = {73--82}
+}
+
+@incollection{Waller1998,
+	address = {Calgary},
+	title = {Origin of the molluscan class {Bivalvia} and a phylogeny of major groups},
+	booktitle = {Bivalves: {An} {Eon} of {Evolution}},
+	publisher = {University of Calgary Press},
+	author = {Waller, T R},
+	editor = {Johnston, P A and Haggart, J W},
+	year = {1998},
+	pages = {1--45}
+}
 @article{Smith2017,
   author = {Smith, M. R.},
   doi = {10.1101/227942},
@@ -2527,6 +2574,31 @@
   publisher = {Oxford University Press},
   title = {{Phoronida}},
   year = {2016}
+}
+
+@article{Martel2000,
+	title = {Identification of settling and early postlarval stages of mussels (\textit{{Mytilus}} spp.) from the {Pacific} coast of {North} {America}, using prodissoconch morphology and genomic {DNA}},
+	volume = {137},
+	doi = {10.1007/s002270000},
+	journal = {Marine Biology},
+	author = {Martel, A L},
+	year = {2000},
+	pages = {811--818},
+	file = {Martel - Identi®cation of settling and early postlarval sta.pdf:C\:\\Users\\ms609\\Zotero\\storage\\CWNP9TA8\\Martel - Identi®cation of settling and early postlarval sta.pdf:application/pdf}
+}
+@article{Kniprath1980,
+	title = {Larval development of the shell and the shell gland in \textit{{Mytilus}} ({Bivalvia})},
+	volume = {188},
+	issn = {0340-0794, 1432-041X},
+	url = {http://link.springer.com/10.1007/BF00849049},
+	doi = {10.1007/BF00849049},
+	abstract = {In the newly hatched larva of Mytilus galloprovincialis the larval shell field almost totally invaginates to form a shell gland. Only very few cells remain outside and they meet at one point. Only these cells secrete the pellicle, which in the beginning is protected by the glycocalyx and the microvilli of the surrounding cells. The invaginated cells do not participate in pellicle secretion. The secretion partly passes through infoldings of the apical cell membrane. Mineralization of each valve begins along the hinge line, continues to the valve margins and includes the valve centre.},
+	number = {3},
+	urldate = {2019-06-26},
+	journal = {Wilhelm Roux's Archives of Developmental Biology},
+	author = {Kniprath, Ernst},
+	year = {1980},
+	pages = {201--204}
 }
 
 @article{Temereva2016Thenervous,
