--- a/References.bib
+++ b/References.bib
@@ -387,6 +387,17 @@
   year = {2009}
 }
 
+@article{ConwayMorris1996,
+	title = {Lower {Cambrian} coeloscleritophorans (\textit{{Ninella}}, \textit{{Siphogonuchites}}) from {Xinjiang} and {Shaanxi}, {China}},
+	volume = {133},
+	issn = {0016-7568},
+	doi = {10.1017/S0016756800007238},
+	number = {01},
+	journal = {Geological Magazine},
+	author = {Conway Morris, Simon and Chapman, A. J.},
+	year = {1996},
+	pages = {33}
+}
 @article{Chapman1914IVNotes,
   author = {Chapman, F.},
   doi = {10.1111/j.1365-2818.1914.tb01730.x},
@@ -2380,6 +2391,17 @@
   year = {2014}
 }
 
+@article{Healy1995,
+	title = {Spermatozoa and spermatogenesis in a monoplacophoran mollusc, \textit{{Laevipilina} antarctica}: ultrastructure and comparison with other {Mollusca}},
+	volume = {122},
+	url = {http://dx.doi.org/10.1007/BF00349277},
+	doi = {10.1007/BF00349277},
+	number = {1},
+	journal = {Marine Biology},
+	author = {Healy, J M and Schaefer, Kurt and Haszprunar, G},
+	year = {1995},
+	pages = {53--65}
+}
 @article{Reynolds1999,
 	title = {Phylogenetic relationships among families of the {Scaphopoda} ({Mollusca})},
 	volume = {126},
