--- a/References.bib
+++ b/References.bib
@@ -387,17 +387,6 @@
   year = {2009}
 }
 
-@article{ConwayMorris1996,
-	title = {Lower {Cambrian} coeloscleritophorans (\textit{{Ninella}}, \textit{{Siphogonuchites}}) from {Xinjiang} and {Shaanxi}, {China}},
-	volume = {133},
-	issn = {0016-7568},
-	doi = {10.1017/S0016756800007238},
-	number = {01},
-	journal = {Geological Magazine},
-	author = {Conway Morris, Simon and Chapman, A. J.},
-	year = {1996},
-	pages = {33}
-}
 @article{Chapman1914IVNotes,
   author = {Chapman, F.},
   doi = {10.1111/j.1365-2818.1914.tb01730.x},
@@ -447,6 +436,17 @@
   title = {{Three-dimensional structure of the shell plate assembly of the chiton \textit{Tonicella marmorea} and its biomechanical consequences}},
   volume = {177},
   year = {2012}
+}
+
+@article{ConwayMorris1996,
+	title = {Lower {Cambrian} coeloscleritophorans (\textit{{Ninella}}, \textit{{Siphogonuchites}}) from {Xinjiang} and {Shaanxi}, {China}},
+	volume = {133},
+	doi = {10.1017/S0016756800007238},
+	number = {01},
+	journal = {Geological Magazine},
+	author = {Conway Morris, S. and Chapman, A. J.},
+	year = {1996},
+	pages = {33}
 }
 
 @article{ConwayMorris2006,
@@ -570,6 +570,15 @@
   pages = {223--233},
   volume = {102},
   year = {1980},
+}
+
+@book{Ehrlich2010,
+	series = {Biologically Inspired Systems},
+	title = {Biological materials of marine origin: {Invertebrates}},
+	number = {1},
+	publisher = {Springer},
+	author = {Ehrlich, H.},
+	year = {2010}
 }
 
 @article{Elliott1939Noteon,
@@ -1024,6 +1033,17 @@
   year = {1992}
 }
 
+@article{Healy1995,
+	title = {Spermatozoa and spermatogenesis in a monoplacophoran mollusc, \textit{{Laevipilina} antarctica}: ultrastructure and comparison with other {Mollusca}},
+	volume = {122},
+	doi = {10.1007/BF00349277},
+	number = {1},
+	journal = {Marine Biology},
+	author = {Healy, J. M. and Schaefer, K. and Haszprunar, G.},
+	year = {1995},
+	pages = {53--65}
+}
+
 @article{Hejnol2010,
   author = {Hejnol, A.},
   doi = {10.1093/icb/icq103},
@@ -1252,11 +1272,33 @@
   year = {1992},
 }
 
+@article{Katsuno2008,
+	title = {Comparative histology of radula-supporting structures in {Gastropoda}},
+	volume = {50},
+	doi = {10.4002/0076-2997-50.1.13},
+	number = {1},
+	journal = {Malacologia},
+	author = {Katsuno, S. and Sasaki, T.},
+	year = {2008},
+	pages = {13--56}
+}
+
 @techreport{Keay2007,
   author = {Keay, J.},
   institution = {Oregon Institute of Marine Biology},
   title = {{Larval development of the polychaete annelid, \textit{Serpula vermicularis}}},
   year = {2007}
+}
+
+@article{Kniprath1980,
+	title = {Larval development of the shell and the shell gland in \textit{{Mytilus}} ({Bivalvia})},
+	volume = {188},
+	doi = {10.1007/BF00849049},
+	number = {3},
+	journal = {Wilhelm Roux's Archives of Developmental Biology},
+	author = {Kniprath, E.},
+	year = {1980},
+	pages = {201--204}
 }
 
 @article{Kopuchian2010,
@@ -1351,6 +1393,15 @@
   year = {1988}
 }
 
+@article{Lemche1959,
+	title = {The anatomy of \textit{{Neopilina} galatheae} {Lemche}, 1957 ({Mollusca}, {Tryblidiacea})},
+	volume = {3},
+	journal = {Galathea Report},
+	author = {Lemche, H. M. and Wingstrand, K. G.},
+	year = {1959},
+	pages = {9--73}
+}
+
 @article{Lewis2001,
   author = {Lewis, P. O.},
   doi = {10.1080/106351501753462876},
@@ -1371,6 +1422,26 @@
   title = {{Early Cambrian lingulate brachiopods from the Shaanxi Province, China}},
   volume = {126},
   year = {2004}
+}
+
+@article{Lindberg1985,
+	title = {Aplacophorans, {Monoplacophorans}, {Polyplacophorans}, {Scaphopods}: the {Lesser} {Classes}},
+	volume = {13},
+	doi = {10.1017/S0271164800001202},
+	journal = {Notes for a Short Course: Studies in Geology},
+	author = {Lindberg, D. R.},
+	year = {1985},
+	pages = {230--247}
+}
+
+@article{Lundin2001,
+	title = {Ciliary ultrastructure of neomeniomorphs ({Mollusca}, {Neomeniomorpha} = {Solenogastres})},
+	volume = {120},
+	number = {4},
+	journal = {Invertebrate Biology},
+	author = {Lundin, K. and Schander, C.},
+	year = {2001},
+	pages = {342--349}
 }
 
 @article{Lundin2009,
@@ -1528,6 +1599,16 @@
   year = {1976}
 }
 
+@article{Martel2000,
+	title = {Identification of settling and early postlarval stages of mussels (\textit{{Mytilus}} spp.) from the {Pacific} coast of {North} {America}, using prodissoconch morphology and genomic {DNA}},
+	volume = {137},
+	doi = {10.1007/s002270000},
+	journal = {Marine Biology},
+	author = {Martel, A. L.},
+	year = {2000},
+	pages = {811--818},
+}
+
 @article{MartiMus2005,
   author = {{Mart{\'{i}} Mus}, M. and Bergstr{\"{o}}m, J.},
   doi = {10.1111/j.1475-4983.2005.00511.x},
@@ -1549,6 +1630,26 @@
   title = {{Skeletal microstructure of helens, lateral spines of hyolithids}},
   volume = {50},
   year = {2007}
+}
+
+@article{Mclean1979,
+	title = {A new monoplacophoran limpet from the continental shelf off southern {California}},
+	volume = {307},
+	journal = {Contributions to Science and Natural History, Los Angeles County Museum},
+	author = {McLean, J. H.},
+	year = {1979},
+	pages = {1--19}
+}
+
+@article{Menzies1962,
+	title = {A new species of monoplacophoran mollusc, \textit{{Neopilina}} (\textit{{Neopilina}}) \textit{veleronis} from the slope of the {Cedros} {Trench}, {Mexico}},
+	volume = {5},
+	doi = {10.1080/00222936208651264},
+	number = {55},
+	journal = {Journal of Natural History Series 13},
+	author = {Menzies, R. J. and Layton, W.},
+	year = {1962},
+	pages = {401--406}
 }
 
 @article{Miles2007,
@@ -1703,6 +1804,16 @@
 	year = {2006},
 	pmid = {16805897},
 	pages = {325--330},
+}
+
+@article{Okusu2002,
+	title = {Embryogenesis and {Development} of \textit{{Epimenia} babai} ({Mollusca} {Neomeniomorpha})},
+	volume = {203},
+	number = {1},
+	journal = {Biological Bulletin (Woods Hole)},
+	author = {Okusu, A.},
+	year = {2002},
+	pages = {87--103}
 }
 
 @article{Orrhage1971,
@@ -1945,6 +2056,17 @@
   pages = {229},
   volume = {58},
   year = {2004},
+}
+
+@article{Reynolds1999,
+	title = {Phylogenetic relationships among families of the {Scaphopoda} ({Mollusca})},
+	volume = {126},
+	doi = {10.1111/j.1096-3642.1999.tb00151.x},
+	number = {2},
+	journal = {Zoological Journal of the Linnean Society},
+	author = {Reynolds, P. D. and Okusu, A.},
+	year = {1999},
+	pages = {131--154}
 }
 
 @article{Rice1988,
@@ -2348,17 +2470,6 @@
   year = {2017},
 }
 
-@article{Katsuno2008,
-	title = {Comparative histology of radula-supporting structures in {Gastropoda}},
-	volume = {50},
-	doi = {10.4002/0076-2997-50.1.13},
-	number = {1},
-	journal = {Malacologia},
-	author = {Katsuno, S and Sasaki, T},
-	year = {2008},
-	pages = {13--56}
-}
-
 @phdthesis{Smith2012,
   address = {Toronto, Ontario},
   author = {Smith, M. R.},
@@ -2391,53 +2502,6 @@
   year = {2014}
 }
 
-@article{Healy1995,
-	title = {Spermatozoa and spermatogenesis in a monoplacophoran mollusc, \textit{{Laevipilina} antarctica}: ultrastructure and comparison with other {Mollusca}},
-	volume = {122},
-	url = {http://dx.doi.org/10.1007/BF00349277},
-	doi = {10.1007/BF00349277},
-	number = {1},
-	journal = {Marine Biology},
-	author = {Healy, J M and Schaefer, Kurt and Haszprunar, G},
-	year = {1995},
-	pages = {53--65}
-}
-@article{Reynolds1999,
-	title = {Phylogenetic relationships among families of the {Scaphopoda} ({Mollusca})},
-	volume = {126},
-	url = {http://dx.doi.org/10.1111/j.1096-3642.1999.tb00151.x},
-	doi = {10.1111/j.1096-3642.1999.tb00151.x},
-	number = {2},
-	journal = {Zoological Journal of the Linnean Society},
-	author = {Reynolds, Patrick D and Okusu, Akiko},
-	year = {1999},
-	pages = {131--154}
-}
-
-@article{Steiner1998,
-	title = {Phylogeny of {Scaphopoda} ({Mollusca}) in the light of new anatomical data on the {Gadilinidae} and some {Problematica}, and a reply to {Reynolds}},
-	volume = {27},
-	issn = {0300-3256},
-	url = {http://www.blackwell-synergy.com/doi/abs/10.1111/j.1463-6409.1998.tb00429.x},
-	doi = {10.1111/j.1463-6409.1998.tb00429.x},
-	number = {1},
-	urldate = {2012-08-23},
-	journal = {Zoologica Scripta},
-	author = {Steiner, Gerhard},
-	year = {1998},
-	pages = {73--82}
-}
-
-@incollection{Waller1998,
-	address = {Calgary},
-	title = {Origin of the molluscan class {Bivalvia} and a phylogeny of major groups},
-	booktitle = {Bivalves: {An} {Eon} of {Evolution}},
-	publisher = {University of Calgary Press},
-	author = {Waller, T R},
-	editor = {Johnston, P A and Haggart, J W},
-	year = {1998},
-	pages = {1--45}
-}
 @article{Smith2017,
   author = {Smith, M. R.},
   doi = {10.1101/227942},
@@ -2485,6 +2549,17 @@
   title = {{Phylogeny and classification of Scaphopoda}},
   volume = {58},
   year = {1992}
+}
+
+@article{Steiner1998,
+	title = {Phylogeny of {Scaphopoda} ({Mollusca}) in the light of new anatomical data on the {Gadilinidae} and some {Problematica}, and a reply to {Reynolds}},
+	volume = {27},
+	doi = {10.1111/j.1463-6409.1998.tb00429.x},
+	number = {1},
+	journal = {Zoologica Scripta},
+	author = {Steiner, G.},
+	year = {1998},
+	pages = {73--82}
 }
 
 @article{Storch1978,
@@ -2596,31 +2671,6 @@
   publisher = {Oxford University Press},
   title = {{Phoronida}},
   year = {2016}
-}
-
-@article{Martel2000,
-	title = {Identification of settling and early postlarval stages of mussels (\textit{{Mytilus}} spp.) from the {Pacific} coast of {North} {America}, using prodissoconch morphology and genomic {DNA}},
-	volume = {137},
-	doi = {10.1007/s002270000},
-	journal = {Marine Biology},
-	author = {Martel, A L},
-	year = {2000},
-	pages = {811--818},
-	file = {Martel - Identi®cation of settling and early postlarval sta.pdf:C\:\\Users\\ms609\\Zotero\\storage\\CWNP9TA8\\Martel - Identi®cation of settling and early postlarval sta.pdf:application/pdf}
-}
-@article{Kniprath1980,
-	title = {Larval development of the shell and the shell gland in \textit{{Mytilus}} ({Bivalvia})},
-	volume = {188},
-	issn = {0340-0794, 1432-041X},
-	url = {http://link.springer.com/10.1007/BF00849049},
-	doi = {10.1007/BF00849049},
-	abstract = {In the newly hatched larva of Mytilus galloprovincialis the larval shell field almost totally invaginates to form a shell gland. Only very few cells remain outside and they meet at one point. Only these cells secrete the pellicle, which in the beginning is protected by the glycocalyx and the microvilli of the surrounding cells. The invaginated cells do not participate in pellicle secretion. The secretion partly passes through infoldings of the apical cell membrane. Mineralization of each valve begins along the hinge line, continues to the valve margins and includes the valve centre.},
-	number = {3},
-	urldate = {2019-06-26},
-	journal = {Wilhelm Roux's Archives of Developmental Biology},
-	author = {Kniprath, Ernst},
-	year = {1980},
-	pages = {201--204}
 }
 
 @article{Temereva2016Thenervous,
@@ -2825,6 +2875,17 @@
   number = {4},
   pages = {438-458},
   year = {2018}
+}
+
+@incollection{Waller1998,
+	address = {Calgary},
+	title = {Origin of the molluscan class {Bivalvia} and a phylogeny of major groups},
+	booktitle = {Bivalves: {An} {Eon} of {Evolution}},
+	publisher = {University of Calgary Press},
+	author = {Waller, T. R.},
+	editor = {Johnston, P A and Haggart, J W},
+	year = {1998},
+	pages = {1--45}
 }
 
 @article{Wanninger2001,
