--- a/index.Rmd
+++ b/index.Rmd
@@ -54,8 +54,7 @@ tntFile <- gsub(".*(mbank_.*\\.tnt).*", "\\1", readLines(tntFiles[1], n=1))
 nexusFile <- MostRecentNexus()
 my_data <- ReadAsPhyDat(nexusFile)
 ignored_taxa <- c('Conotheca', 'Maxilites', 'Pauxillites',
-                  'Probactrotheca', 'Chaetoderma', 'Leptochiton', 
-                  'Mopalia') # Also manually update tnt.run using `taxcode-`
+                  'Probactrotheca') # Also manually update tnt.run using `taxcode-`
 #ignored_taxa <- character(0)
 my_data[ignored_taxa] <- NULL
 
