--- a/preamble.tex
+++ b/preamble.tex
@@ -1,4 +1,5 @@
 \usepackage{doi} % Adds hyperlinks to dois
+\usepackage{natbib}
 \setcitestyle{round}
 \usepackage{hyperref}
 \usepackage[nottoc]{tocbibind} % list references in TOC
