--- a/References.bib
+++ b/References.bib
@@ -29,6 +29,134 @@
   year = {2006}
 }
 
+
+@article{Gao2015,
+	title = {Layer-by-layer proteomic analysis of \textit{{Mytilus} galloprovincialis} {Shell}},
+	volume = {10},
+	issn = {1932-6203},
+	url = {https://dx.plos.org/10.1371/journal.pone.0133913},
+	doi = {10.1371/journal.pone.0133913},
+	number = {7},
+	urldate = {2019-06-28},
+	journal = {PLoS One},
+	author = {Gao, Peng and Liao, Zhi and Wang, Xin-xing and Bao, Lin-fei and Fan, Mei-hua and Li, Xiao-min and Wu, Chang-wen and Xia, Shu-wei},
+	editor = {Lin, Senjie},
+	month = jul,
+	year = {2015},
+	pages = {e0133913}
+}
+
+@article{Zardus1998,
+	title = {Embryogenesis, morphology and ultrastructure of the pericalymma larva of \textit{{Acila} castrensis} ({Bivalvia}: {Protobranchia}: {Nuculoida})},
+	volume = {117},
+	issn = {10778306},
+	shorttitle = {Embryogenesis, {Morphology} and {Ultrastructure} of the {Pericalymma} {Larva} of {Acila} castrensis ({Bivalvia}},
+	url = {https://www.jstor.org/stable/3226988?origin=crossref},
+	doi = {10.2307/3226988},
+	number = {3},
+	urldate = {2019-06-28},
+	journal = {Invertebrate Biology},
+	author = {Zardus, John D. and Morse, M. Patricia},
+	year = {1998},
+	pages = {221}
+}
+@article{Niijima1965,
+	title = {The acrosome reaction in \textit{{Mytilus} edulis}: {I}. {Fine} structure of the intact acrosome},
+	volume = {25},
+	issn = {0021-9525, 1540-8140},
+	url = {http://www.jcb.org/cgi/doi/10.1083/jcb.25.2.243},
+	doi = {10.1083/jcb.25.2.243},
+	number = {2},
+	urldate = {2019-06-28},
+	journal = {The Journal of Cell Biology},
+	author = {Niijima, L.},
+	month = may,
+	year = {1965},
+	pages = {243--248}
+}
+@article{Humphreys1962,
+	title = {Electron microscope studies on eggs of \textit{{Mytilus} edulis}},
+	volume = {7},
+	issn = {00225320},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0022532062900412},
+	doi = {10.1016/S0022-5320(62)90041-2},
+	number = {5-6},
+	urldate = {2019-06-28},
+	journal = {Journal of Ultrastructure Research},
+	author = {Humphreys, Walter J.},
+	month = dec,
+	year = {1962},
+	pages = {467--487}
+}
+@article{Meyer2010,
+	title = {A comprehensive fate map by intracellular injection of identified blastomeres in the marine polychaete \textit{{Capitella} teleta}},
+	volume = {1},
+	doi = {10.1186/2041-9139-1-8},
+	journal = {EvoDevo},
+	author = {Meyer, Néva P. and Boyle, Michael J. and Martindale, Mark Q. and Seaver, Elaine C.},
+	year = {2010},
+	pages = {8}
+}
+
+@article{Marlow2014,
+	title = {Larval body patterning and apical organs are conserved in animal evolution},
+	volume = {12},
+	issn = {1741-7007},
+	url = {https://bmcbiol.biomedcentral.com/articles/10.1186/1741-7007-12-7},
+	doi = {10.1186/1741-7007-12-7},
+	number = {1},
+	urldate = {2019-06-28},
+	journal = {BMC Biology},
+	author = {Marlow, Heather and Tosches, Maria Antonietta and Tomer, Raju and Steinmetz, Patrick R and Lauri, Antonella and Larsson, Tomas and Arendt, Detlev},
+	month = dec,
+	year = {2014},
+	pages = {7}
+}
+
+@article{Gao2015,
+	title = {Layer-by-{Layer} {Proteomic} {Analysis} of \textit{{Mytilus} galloprovincialis} {Shell}},
+	volume = {10},
+	issn = {1932-6203},
+	url = {https://dx.plos.org/10.1371/journal.pone.0133913},
+	doi = {10.1371/journal.pone.0133913},
+	number = {7},
+	urldate = {2019-06-28},
+	journal = {PLoS One},
+	author = {Gao, Peng and Liao, Zhi and Wang, Xin-xing and Bao, Lin-fei and Fan, Mei-hua and Li, Xiao-min and Wu, Chang-wen and Xia, Shu-wei},
+	editor = {Lin, Senjie},
+	month = jul,
+	year = {2015},
+	pages = {e0133913}
+}
+@article{Eckelbarger1987,
+	title = {Spermatogenesis, sperm storage and comparative sperm morphology in nine species of \textit{{Capitella}}, \textit{{Capitomastus}} and \textit{{Capitellides} }({Polychaeta}: {Capitellidae})},
+	volume = {95},
+	issn = {0025-3162, 1432-1793},
+	shorttitle = {Spermatogenesis, sperm storage and comparative sperm morphology in nine species of {Capitella}, {Capitomastus} and {Capitellides} ({Polychaeta}},
+	url = {http://link.springer.com/10.1007/BF00409572},
+	doi = {10.1007/BF00409572},
+	number = {3},
+	urldate = {2019-06-28},
+	journal = {Marine Biology},
+	author = {Eckelbarger, K. J. and Grassle, J. P.},
+	month = aug,
+	year = {1987},
+	pages = {415--429}
+}
+@article{Eckelbarger1983,
+	title = {Ultrastructural differences in the eggs and ovarian follicle cells of \textit{{Capitella}} ({Polychaeta}) sibling species},
+	volume = {165},
+	issn = {0006-3185, 1939-8697},
+	url = {https://www.journals.uchicago.edu/doi/10.2307/1541203},
+	doi = {10.2307/1541203},
+	number = {2},
+	urldate = {2019-06-28},
+	journal = {The Biological Bulletin},
+	author = {Eckelbarger, Kevin J. and Grassle, Judith P.},
+	month = oct,
+	year = {1983},
+	pages = {379--393}
+}
 @article{Adrianov2011,
   author = {Adrianov, A. V. and Maiorova, A. S. and Malakhov, V. V.},
   doi = {10.1080/07924259.2010.548638},
@@ -2289,6 +2417,17 @@
   year = {1993}
 }
 
+@article{Scheltema2014,
+	title = {The original molluscan radula and progenesis in {Aplacophora} revisited},
+	volume = {48},
+	doi = {10.1080/00222933.2014.959573},
+	number = {45-48},
+	journal = {Journal of Natural History},
+	author = {Scheltema, Amélie H.},
+	year = {2014},
+	pages = {2855--2869}
+}
+
 @article{Schopf1967,
   author = {Schopf, T. J. M. and Manheim, F. T.},
   doi = {10.2307/1302092},
@@ -2330,6 +2469,17 @@
   title = {{The serotonin-lir nervous system of the Bryozoa (Lophotrochozoa): a general pattern in the Gymnolaemata and implications for lophophore evolution of the phylum Evolutionary developmental biology and morphology}},
   volume = {15},
   year = {2015}
+}
+
+@article{Schweigkofler1998,
+	title = {Ultrastructure and formation of hooded hooks in \textit{{Capitella} capitata} ({Annelida}, {Capitellida})},
+	volume = {118},
+	doi = {10.1007/s004350050062},
+	number = {2},
+	journal = {Zoomorphology},
+	author = {Schweigkofler, M. and Bartolomaeus, T. and von Salvini-Plawen, L.},
+	year = {1998},
+	pages = {117--128}
 }
 
 @article{Sereno2007,
@@ -2502,6 +2652,62 @@
   year = {2014}
 }
 
+@article{Lewis1980,
+	title = {Morphology of abalone spermatozoa before and after the acrosome reaction},
+	volume = {72},
+	issn = {00225320},
+	url = {http://dx.doi.org/10.1016/S0022-5320(80)90133-1},
+	doi = {10.1016/S0022-5320(80)90133-1},
+	number = {1},
+	urldate = {2012-10-23},
+	journal = {Journal of Ultrastructure Research},
+	author = {Lewis, Cindy A. and Leighton, David L. and Vacquier, Victor D.},
+	year = {1980},
+	pages = {39--46}
+}
+
+@article{Martin1983,
+	title = {Fine structure of the ovary in the red abalone \textit{{Haliotis} rufescens} ({Mollusca}: {Gastropoda})},
+	volume = {103},
+	issn = {0720-213X, 1432-234X},
+	shorttitle = {Fine structure of the ovary in the red abalone {Haliotis} rufescens ({Mollusca}},
+	url = {http://link.springer.com/10.1007/BF00312240},
+	doi = {10.1007/BF00312240},
+	number = {2},
+	urldate = {2019-09-18},
+	journal = {Zoomorphology},
+	author = {Martin, G. G. and Romero, K. and Miller-Walker, C.},
+	year = {1983},
+	pages = {89--102}
+}
+
+
+@article{Barlow1992,
+	title = {Patterns of serotonin and {SCP} immunoreactivity during metamorphosis of the nervous system of the red abalone, \textit{{Haliotis} rufescens}},
+	volume = {23},
+	issn = {0022-3034, 1097-4695},
+	url = {http://doi.wiley.com/10.1002/neu.480230705},
+	doi = {10.1002/neu.480230705},
+	number = {7},
+	urldate = {2019-09-18},
+	journal = {Journal of Neurobiology},
+	author = {Barlow, Linda A. and Truman, James W.},
+	year = {1992},
+	pages = {829--844}
+}
+@article{Biggelaar1993,
+	title = {Cleavage pattern in embryos of \textit{{Haliotis} tuberculata} ({Archaeogastropoda}) and gastropod phylogeny},
+	volume = {216},
+	issn = {0362-2525, 1097-4687},
+	url = {http://doi.wiley.com/10.1002/jmor.1052160203},
+	doi = {10.1002/jmor.1052160203},
+	number = {2},
+	urldate = {2019-09-18},
+	journal = {Journal of Morphology},
+	author = {van den Biggelaar, Jo A. M.},
+	year = {1993},
+	pages = {121--139}
+}
 @article{Smith2017,
   author = {Smith, M. R.},
   doi = {10.1101/227942},
@@ -2510,6 +2716,16 @@
   year = {2017}
 }
 
+@article{Chen2019,
+	title = {Death march of a segmented and trilobate bilaterian elucidates early animal evolution},
+	issn = {0028-0836, 1476-4687},
+	url = {http://www.nature.com/articles/s41586-019-1522-7},
+	doi = {10.1038/s41586-019-1522-7},
+	urldate = {2019-09-18},
+	journal = {Nature},
+	author = {Chen, Zhe and Zhou, Chuanming and Yuan, Xunlai and Xiao, Shuhai},
+	year = {2019}
+}
 @misc{Smith2018TreeSearch,
   author = {Smith, M. R.},
   doi = {10.5281/zenodo.1042590},
@@ -2518,6 +2734,25 @@
   year = {2018}
 }
 
+@article{SmithInPrep,
+  author = {Smith, M. R.},
+  title = {The affinity of _Halkieria_},
+  journal = {In preparation}
+}
+
+@article{Parry2019,
+	title = {\textit{{Canadia} spinosa} and the early evolution of the annelid nervous system},
+	volume = {5},
+	issn = {2375-2548},
+	url = {http://advances.sciencemag.org/lookup/doi/10.1126/sciadv.aax5858},
+	doi = {10.1126/sciadv.aax5858},
+	number = {9},
+	urldate = {2019-09-18},
+	journal = {Science Advances},
+	author = {Parry, Luke and Caron, Jean-Bernard},
+	year = {2019},
+	pages = {eaax5858}
+}
 @article{Sperling2011Molecularpaleobiological,
   author = {Sperling, E. A. and Pisani, D. and Peterson, K. J.},
   doi = {10.1111/j.1525-142X.2011.00480.x},
